<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity2"
    android:background="@color/darkBrown">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_of_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <EditText
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#50000000"
                    android:drawableLeft="@drawable/baseline_search_24"
                    android:drawablePadding="15dp"
                    android:padding="28dp"
                    android:text="Search anything..."
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/textView18"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textView19"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="100dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCatergory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressCatergory"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/orange"
                        android:indeterminateTintMode="src_in"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/progressBar4"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/textView30"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:text="See all"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="200dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewpopuler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="0dp" />

                    <ProgressBar
                        android:id="@+id/progressBarpopuler"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="272dp"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/orange"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/textView32"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:text="See all"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="-45dp" />

                    <ProgressBar
                        android:id="@+id/progressBar6"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="272dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="60dp"
                        android:indeterminateTint="@color/orange"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="48dp"
                        android:layout_height="78dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/baseline_shopping_cart_24" />
                    />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="48dp"
                        android:layout_height="78dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/baseline_favorite_2" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="48dp"
                        android:layout_height="78dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/baseline_location_pin_24" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="48dp"
                        android:layout_height="78dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/baseline_account_circle_2" />

                </LinearLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>
